CB-26066, CB-25340 - FreeIPA upgrade should have status reason text for Marketplace errors
This commit contains the following 3 fixes:
 - from now on, we present the Marketplace error in the event history in case of VHD fallback, too
   - for FreeIPA creations and upscales - we present the error as part of detailedStackStatus
   - for Runtime creations and upscales
 - there was a bug that during runtime creation, we had not run the logic to determine fallback image,
which resulted in our code always skipping fallback, this is addressed, too
 - removed more than 100 occurrences of updateStackStatus(stack.getId()) that caused 1 unnecessary DB fetch each